update_triangle_func_ok

--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -30935,7 +30935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30957,6 +30957,7 @@
       "[array([[0.83244264, 0.21233911, 0.18182497]]),\n",
       " array([[0.45606998, 0.78517596, 0.19967378]]),\n",
       " array([[0.94888554, 0.96563203]])]\n",
+      "[[0.61854316 0.69474056]]\n",
       "z_ALL=\n",
       "[array([[0.79774738, 0.89698902, 1.33988298]]),\n",
       " array([[0.54382447, 0.64815769, 1.08676429]]),\n",
@@ -30987,6 +30988,7 @@
     "    fz2 = sigmoid(z2)\n",
     "    z3 = np.dot(fz2, W3) #+ b3\n",
     "    fz3 = sigmoid (z3)\n",
+    "    print(fz3)\n",
     "    Z_ALL = [z1, z2, z3]\n",
     "    FZ_ALL = [fz1, fz2, fz3]\n",
     "    return Z_ALL, FZ_ALL #xを入力したnetworkで順伝播して得られた出力結果\n",
@@ -31020,7 +31022,7 @@
     "b3 = np.random.random([1,W3])\n",
     "\n",
     "W_ALL = [w1,w2,w3]# 重みパラメータを保存\n",
-    "layer_num = len(W_ALL)-1\n",
+    "layer_num = len(W_ALL)-1 #層の数用の変数　０スタートにするため１減らしている\n",
     "print(layer_num)\n",
     "# W_ALL.append(w1)\n",
     "# W_ALL.append(w2)\n",
@@ -31183,7 +31185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -31197,21 +31199,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0.6567421 , 1.02219479, 0.75710953]),\n",
-      " array([0.53338643, 0.61339238, 1.04491542]),\n",
-      " array([0.48039421, 0.81563067])]\n",
-      "[array([0.65852817, 0.7353999 , 0.68072585]),\n",
-      " array([0.6302726 , 0.64871426, 0.73979733]),\n",
-      " array([0.61784096, 0.69330807])]\n",
-      "92\n",
-      "[array([0.63270164, 0.65659518, 0.74777193])]\n",
-      "[array([0.65852817, 0.7353999 , 0.68072585]),\n",
-      " array([0.6302726 , 0.64871426, 0.73979733]),\n",
-      " array([0.61784096, 0.69330807])]\n",
-      "[array([0.6567421 , 1.02219479, 0.75710953]),\n",
-      " array([0.53338643, 0.61339238, 1.04491542]),\n",
-      " array([0.48039421, 0.81563067])]\n",
-      "3\n"
+      "[[0.61854316 0.69474056]]\n",
+      "[array([[0.79774738, 0.89698902, 1.33988298]]),\n",
+      " array([[0.54382447, 0.64815769, 1.08676429]]),\n",
+      " array([[0.48336924, 0.82237645]])]\n",
+      "[array([[0.68949242, 0.71033035, 0.7924707 ]]),\n",
+      " array([[0.63270164, 0.65659518, 0.74777193]]),\n",
+      " array([[0.61854316, 0.69474056]])]\n",
+      "fz_all=\n",
+      "[array([[0.68949242, 0.71033035, 0.7924707 ]]), array([[0.63270164, 0.65659518, 0.74777193]]), array([[0.61854316, 0.69474056]])]\n",
+      "サークル\n",
+      "Y: [[0.61854316 0.69474056]] Length: 1\n",
+      "teach: [[0.5 0.7]] Length: 1\n",
+      "[array([ 0.11854316, -0.00525944])]\n",
+      "koubai=\n",
+      "[array([ 0.11854316, -0.00525944])]\n",
+      "array([[0.22753385, 0.        ],\n",
+      "       [0.        , 0.        ]])\n",
+      "array([[0.22753385, 0.        ],\n",
+      "       [0.        , 0.2221041 ]])\n",
+      "fin▲\n",
+      "array([[0.22753385, 0.        ],\n",
+      "       [0.        , 0.        ]])\n",
+      "array([[0.22753385, 0.        ],\n",
+      "       [0.        , 0.2221041 ]])\n",
+      "fin▲\n"
      ]
     },
     {
@@ -31223,38 +31235,53 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "shapes (1,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)",
+     "evalue": "shapes (1,3) and (2,2) not aligned: 3 (dim 1) != 2 (dim 0)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 67\u001b[0m\n\u001b[0;32m     65\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, triangle)\n\u001b[0;32m     66\u001b[0m     star \u001b[39m=\u001b[39m grad_z_and_fz(W_ALL,) \u001b[39m#★マークつまりi番目のｗの行列を返す\u001b[39;00m\n\u001b[1;32m---> 67\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(koubai, star)\n\u001b[0;32m     69\u001b[0m triangle \u001b[39m=\u001b[39m grad_fz_and_z(FZ, Z)\n\u001b[0;32m     70\u001b[0m koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, triangle)\n",
+      "Cell \u001b[1;32mIn[29], line 80\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(layer_num, \u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m): \u001b[39m#進むごとにlayer_numを１ずつ減らしながら繰り返す\u001b[39;00m\n\u001b[0;32m     79\u001b[0m     triangle \u001b[39m=\u001b[39m grad_fz_and_z(layer_num, FZ, Z) \u001b[39m#▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_numも引数にとる\u001b[39;00m\n\u001b[1;32m---> 80\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(koubai, triangle)\n\u001b[0;32m     81\u001b[0m     star \u001b[39m=\u001b[39m grad_z_and_fz(W_ALL,) \u001b[39m#★マークつまりi番目のｗの行列を返す\u001b[39;00m\n\u001b[0;32m     82\u001b[0m     koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, star)\n",
       "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (1,3) and (2,3) not aligned: 3 (dim 1) != 2 (dim 0)"
+      "\u001b[1;31mValueError\u001b[0m: shapes (1,3) and (2,2) not aligned: 3 (dim 1) != 2 (dim 0)"
      ]
     }
    ],
    "source": [
     "from tqdm import trange\n",
     "# ●マークのタイプの行列微分する関数\n",
-    "def grad_loss_and_y(teach, Y):\n",
+    "def grad_loss_and_y(layer_num, teach, Y):\n",
     "    circle = []\n",
     "    for out in range(len(teach)): #出力の数つまり教師の数だけ(y-t)がでてくる\n",
-    "        Y[out] - teach[out]\n",
-    "        circle.append(Y[out] - teach[out])\n",
+    "        loss = Y[out] - teach[out] #Y-ｔ\n",
+    "        circle.append(loss) #結果を一つずつ足しこんでいく\n",
     "        # circle = np.transpose(circle) #偏微分計算によって転置行列になった\n",
-    "        return circle\n",
+    "        print(\"サークル\")\n",
+    "        print(\"Y:\", Y, \"Length:\", len(Y))\n",
+    "        print(\"teach:\", teach, \"Length:\", len(teach))\n",
+    "        print(circle)\n",
+    "\n",
+    "    return circle\n",
     "\n",
     "\n",
     "# ▲マークのタイプの行列微分する関数(シグモイドの微分が出る)\n",
     "def grad_fz_and_z(layer_num, FZ, Z):\n",
-    "    triangle = np.zeros((len(FZ), len(Z)))\n",
-    "    pprint.pprint(FZ)\n",
-    "    pprint.pprint(Z)\n",
-    "    print(len(FZ))\n",
-    "    for gyou in range(len(FZ)):\n",
-    "        triangle[layer_num, gyou] = (1-sigmoid(FZ[layer_num][gyou]))*sigmoid(FZ[layer_num][gyou]) #配列をnp.zerosで作って，その要素を指定場所に代入する\n",
-    "        return triangle\n",
+    "    # print(len(FZ[layer_num]))\n",
+    "    # print(len(FZ[layer_num]))\n",
+    "    # print(Z[layer_num][0]) #layer_num番目の，０番目にｆｚの値が格納されている\n",
+    "    # print(len(Z[layer_num][0]))\n",
+    "    triangle = np.zeros((len(FZ[layer_num][0]), len(Z[layer_num][0]))) #ｆｚとｚの大きさの０だけ行列を作成\n",
+    "    # pprint.pprint(FZ)\n",
+    "    # pprint.pprint(Z)\n",
+    "    # pprint.pprint(triangle)\n",
+    "    # print(len(FZ))\n",
+    "    for gyou in range(len(FZ[layer_num][0])):\n",
+    "        # print(\"なか\")\n",
+    "        # print((FZ[layer_num]))\n",
+    "        # pprint.pprint(triangle[0])\n",
+    "        triangle[gyou, gyou] = (1-sigmoid(FZ[layer_num][0][gyou]))*sigmoid(FZ[layer_num][0][gyou]) #配列をnp.zerosで作って，その要素を指定場所に代入する\n",
+    "        pprint.pprint(triangle)\n",
+    "    print(\"fin▲\")\n",
+    "    return triangle\n",
     "\n",
     "\n",
     "# ★マークのタイプの行列微分する関数(重みWが出る)．ここでは全パターン出る\n",
@@ -31281,23 +31308,23 @@
     "#学習回数を定義\n",
     "learn = 2500\n",
     "\n",
-    "Network = set_network(w1,b1,w2,b2,w3,b3)#初期ネットワーク作成\n",
-    "in_x, teach = make_input()#入力データと教師信号作成\n",
-    "\n",
+    "Network = set_network(W_ALL[0], B_ALL[0], W_ALL[1], B_ALL[1], W_ALL[2],B_ALL[2],)#３層のネットワークを用意\n",
     "COUNT=[]\n",
     "LOSS=[]\n",
     "\n",
     "#繰り返し処理\n",
-    "for i in trange (10): #適当 未定あとで\n",
+    "for i in trange (10): #適当 未定あとできめる\n",
     "    Z, FZ = forward(Network, in_x) #順伝播\n",
     "    pprint.pprint(Z)\n",
     "    pprint.pprint(FZ)\n",
     "\n",
     "    # 逆伝播\n",
-    "    koubai = grad_loss_and_y(teach, fz_all[layer_num-1])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい\n",
-    "    print(\"92\")\n",
+    "    print(\"fz_all=\")\n",
+    "    print(FZ)\n",
+    "    koubai = grad_loss_and_y(layer_num, teach, fz_all[layer_num])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい fz_all[layer_num]とは層数の数番目のfzつまり最後の層の出力を引数にとる\n",
+    "    print(\"koubai=\")\n",
     "    pprint.pprint(koubai)\n",
-    "    for i in range(layer_num, 0, -1):\n",
+    "    for i in range(layer_num, 0, -1): #進むごとにlayer_numを１ずつ減らしながら繰り返す\n",
     "        triangle = grad_fz_and_z(layer_num, FZ, Z) #▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_numも引数にとる\n",
     "        koubai = np.dot(koubai, triangle)\n",
     "        star = grad_z_and_fz(W_ALL,) #★マークつまりi番目のｗの行列を返す\n",
@@ -31523,9 +31550,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 8, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 77\u001b[0m\n\u001b[0;32m     59\u001b[0m                                                                                             \u001b[39m# print('W_ALL=')\u001b[39;00m\n\u001b[0;32m     60\u001b[0m                                                                                             \u001b[39m# pprint.pprint(W_ALL)\u001b[39;00m\n\u001b[0;32m     61\u001b[0m                                                                                             \u001b[39m# print('B_ALL=')\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     73\u001b[0m                                                                                             \u001b[39m# print('b3=')\u001b[39;00m\n\u001b[0;32m     74\u001b[0m                                                                                             \u001b[39m# pprint.pprint(b3)\u001b[39;00m\n\u001b[0;32m     76\u001b[0m Network \u001b[39m=\u001b[39m set_network(w1,b1,w2,b2,w3,b3)\n\u001b[1;32m---> 77\u001b[0m z1, fz1, z2, fz2, z3, fz3, z_all, fz_all \u001b[39m=\u001b[39m forward(Network, in_x)\n\u001b[0;32m     78\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m----------------\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     79\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mz1=\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 8, got 2)"
+     ]
+    }
+   ],
    "source": [
     "# 入力３こ、隠れ層１層目３個、隠れそう２層目３個、出力層２個\n",
     "import pprint\n",
@@ -31537,7 +31576,7 @@
     "    network = [w1,b1,w2,b2,w3,b3] #listは中身何でもよし配列なので、arrayは数値の配列\n",
     "    return network\n",
     "\n",
-    "def forward(network, in_x):\n",
+    "def forward(network, in_x): #順伝播　ニューロンの出力と入力をそれぞれｚ，ｆｚとしてリストにまとめる\n",
     "    W1, W2, W3 = np.array(network[0]), np.array(network[2]), np.array(network[4])\n",
     "    b1, b2, b3 = np.array(network[1]), np.array(network[3]), np.array(network[5])\n",
     "\n",
@@ -31573,11 +31612,9 @@
     "#初期の重みとバイアスを設定（ここではランダムな値をとる）\n",
     "#3つのニューロンから、8つのニューロンに出力する際の重み\n",
     "w1 = np.random.random([IN,W1])\n",
-    "#バイアスを8つのニューロンにたす\n",
     "b1 = np.random.random([1,W1])\n",
     " #8つのニューロンから5つのニューロンに出力する際の重み\n",
     "w2 = np.random.random([W1,W2])\n",
-    "#5つのニューロンにたすバイアス\n",
     "b2 = np.random.random([1,W2])\n",
     " #5つのニューロンから8つのニューロンに出力する際の重み\n",
     "w3 = np.random.random([W2,W3])\n",
@@ -31605,7 +31642,7 @@
     "                                                                                            # pprint.pprint(b3)\n",
     "\n",
     "Network = set_network(w1,b1,w2,b2,w3,b3)\n",
-    "z1, fz1, z2, fz2, z3, fz3_y, z_all, fz_all = forward(Network, in_x)\n",
+    "z1, fz1, z2, fz2, z3, fz3, z_all, fz_all = forward(Network, in_x)\n",
     "print('----------------')\n",
     "print('z1=')\n",
     "pprint.pprint(z1)\n",
@@ -31625,7 +31662,7 @@
     "print('z3=')\n",
     "pprint.pprint(z3)\n",
     "print('fz3=')\n",
-    "pprint.pprint(fz3_y)\n",
+    "pprint.pprint(fz3)\n",
     "print('teach')\n",
     "pprint.pprint(teach)\n",
     "\n",
