update_square_progress

--- a/whisper_test2.ipynb
+++ b/whisper_test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,25 +10,25 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/openai/whisper.git\n",
-      "  Cloning https://github.com/openai/whisper.git to c:\\users\\atusi\\appdata\\local\\temp\\pip-req-build-m927u3fk\n"
+      "  Cloning https://github.com/openai/whisper.git to c:\\users\\atusi\\appdata\\local\\temp\\pip-req-build-zvhct73b\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-m927u3fk'\n",
-      "  fatal: unable to access 'https://github.com/openai/whisper.git/': Failed to connect to github.com port 443 after 21067 ms: Couldn't connect to server\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-zvhct73b'\n",
+      "  fatal: unable to access 'https://github.com/openai/whisper.git/': Failed to connect to github.com port 443 after 21058 ms: Couldn't connect to server\n",
       "  error: subprocess-exited-with-error\n",
       "  \n",
-      "  × git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-m927u3fk' did not run successfully.\n",
+      "  × git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-zvhct73b' did not run successfully.\n",
       "  │ exit code: 128\n",
       "  ╰─> See above for output.\n",
       "  \n",
       "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
       "error: subprocess-exited-with-error\n",
       "\n",
-      "× git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-m927u3fk' did not run successfully.\n",
+      "× git clone --filter=blob:none --quiet https://github.com/openai/whisper.git 'C:\\Users\\atusi\\AppData\\Local\\Temp\\pip-req-build-zvhct73b' did not run successfully.\n",
       "│ exit code: 128\n",
       "╰─> See above for output.\n",
       "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mwhisper\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mwhisper\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'whisper'"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
