--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -4659,9 +4659,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "W_ALL=\n",
+      "[array([[0.59865848, 0.15601864, 0.15599452],\n",
+      "       [0.05808361, 0.86617615, 0.60111501],\n",
+      "       [0.70807258, 0.02058449, 0.96990985]]),\n",
+      " array([[0.18340451, 0.30424224, 0.52475643],\n",
+      "       [0.43194502, 0.29122914, 0.61185289],\n",
+      "       [0.13949386, 0.29214465, 0.36636184]]),\n",
+      " array([[0.51423444, 0.59241457],\n",
+      "       [0.04645041, 0.60754485],\n",
+      "       [0.17052412, 0.06505159]])]\n",
+      "B_ALL=\n",
+      "[array([[0.83244264, 0.21233911, 0.18182497]]),\n",
+      " array([[0.45606998, 0.78517596, 0.19967378]]),\n",
+      " array([[0.94888554, 0.96563203]])]\n"
+     ]
+    }
+   ],
    "source": [
     "# 入力３こ、隠れ層１層目３個、隠れそう２層目３個、出力層２個\n",
     "import pprint\n",
@@ -5133,6 +5155,227 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.61796655 0.69388966]]\n",
+      "サークル\n",
+      "Y: [[0.61796655 0.69388966]] Length: 1\n",
+      "teach: [[0.5 0.7]] Length: 1\n",
+      "[array([ 0.11796655, -0.00611034])]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 1004.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "layer_num_loop= 2 です．\n",
+      "start▲ [[0. 0.]\n",
+      " [0. 0.]]\n",
+      "fin▲ [[0.22757316 0.        ]\n",
+      " [0.         0.2221672 ]]\n",
+      "star\n",
+      "array([[0.51423444, 0.04645041, 0.17052412],\n",
+      "       [0.59241457, 0.60754485, 0.06505159]])\n",
+      "fin= 2\n",
+      "layer_num_loop= 0\n",
+      "start▲ [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "fin▲ [[0.22372981 0.         0.        ]\n",
+      " [0.         0.22219294 0.        ]\n",
+      " [0.         0.         0.21573683]]\n",
+      "loopをぬけました\n",
+      "重みを更新しました\n",
+      "[[0.61796079 0.69388116]]\n",
+      "サークル\n",
+      "Y: [[0.61796079 0.69388116]] Length: 1\n",
+      "teach: [[0.5 0.7]] Length: 1\n",
+      "[array([ 0.11796079, -0.00611884])]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "layer_num_loop= 2 です．\n",
+      "start▲ [[0. 0.]\n",
+      " [0. 0.]]\n",
+      "fin▲ [[0.22757355 0.        ]\n",
+      " [0.         0.22216783]]\n",
+      "star\n",
+      "array([[0.51423444, 0.04645041, 0.17052412],\n",
+      "       [0.59241457, 0.60754485, 0.06505159]])\n",
+      "fin= 2\n",
+      "layer_num_loop= 0\n",
+      "start▲ [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "fin▲ [[0.22374198 0.         0.        ]\n",
+      " [0.         0.22220532 0.        ]\n",
+      " [0.         0.         0.21574901]]\n",
+      "loopをぬけました\n",
+      "重みを更新しました\n",
+      "[array([[ 0.47695713,  0.03058061,  0.01572264],\n",
+      "       [ 0.05363001,  0.86158589,  0.59598241],\n",
+      "       [ 0.66767166, -0.0210569 ,  0.92334399]]),\n",
+      " array([[0.18340451, 0.30424224, 0.52475643],\n",
+      "       [0.43194502, 0.29122914, 0.61185289],\n",
+      "       [0.13949386, 0.29214465, 0.36636184]]),\n",
+      " array([[0.51423444, 0.59241457],\n",
+      "       [0.04645041, 0.60754485],\n",
+      "       [0.17052412, 0.06505159]])]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# square変更実験のコピー版＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+    "from tqdm import trange\n",
+    "# ●マークのタイプの行列微分する関数\n",
+    "def grad_loss_and_y(layer_num, teach, Y):\n",
+    "    circle = []\n",
+    "    for out in range(len(teach)): #出力の数つまり教師の数だけ(y-t)がでてくる\n",
+    "        loss = Y[out] - teach[out] #Y-ｔ\n",
+    "        circle.append(loss) #結果を一つずつ足しこんでいく\n",
+    "        # circle = np.transpose(circle) #偏微分計算によって転置行列になった\n",
+    "        print(\"サークル\")\n",
+    "        print(\"Y:\", Y, \"Length:\", len(Y))\n",
+    "        print(\"teach:\", teach, \"Length:\", len(teach))\n",
+    "        print(circle)\n",
+    "\n",
+    "    return circle\n",
+    "\n",
+    "\n",
+    "# ▲マークのタイプの行列微分する関数(シグモイドの微分が出る)\n",
+    "def grad_fz_and_z(layer_num, FZ, Z):\n",
+    "    triangle = np.zeros((len(FZ[layer_num][0]), len(Z[layer_num][0]))) #その層のｆｚとｚの大きさの０だけ行列を作成\n",
+    "    print(\"start▲\", triangle)\n",
+    "    for gyou in range(len(FZ[layer_num][0])):\n",
+    "        triangle[gyou, gyou] = (1-sigmoid(FZ[layer_num][0][gyou]))*sigmoid(FZ[layer_num][0][gyou]) #配列をnp.zerosで作って，その要素を指定場所に代入する\n",
+    "    print(\"fin▲\", triangle)\n",
+    "    return triangle\n",
+    "\n",
+    "\n",
+    "# ★マークのタイプの行列微分する関数(重みWが出る)．ここでは全パターン出る\n",
+    "def grad_z_and_fz(W_ALL,):\n",
+    "    W = W_ALL[layer_num] #今考えている（見ている）重みの値のセットを取り出す（何層目の重み層か）\n",
+    "    star =  np.transpose(W) #偏微分処理を行ったため，転置行列にする 大事！！\n",
+    "    print(\"star\")\n",
+    "    pprint.pprint(star)\n",
+    "    return star\n",
+    "\n",
+    "\n",
+    "# square 編集中\n",
+    "# □マークのタイプの行列微分をする関数（fzがでる）．一度にすべて出すのではなく，行ごとに計算して，最後にそれらを足したい　！！！！完成！！！！\n",
+    "def grad_z_and_w(layer_num, FZ_ALL, W_ALL):\n",
+    "    KOUBAILIST = []\n",
+    "    for square_gyou in range(len(W_ALL[layer_num][0])):#その層の行数の数分繰り返す\n",
+    "        square = np.zeros((len(W_ALL[layer_num]), len(Z_ALL[layer_num][0]))) #その層のWとZの大きさの０だけ行列を作成つまりz行w列の０行列を作成\n",
+    "        square[square_gyou] = FZ_ALL[layer_num] #FZ_ALLのlayer_num番目（つまり今見てる層のfz）を，ループごとに違うところに代入\n",
+    "        KOUBAILIST.append(np.dot(koubai, square)) #そして計算，すると勾配が１×３の形で出てくるので，それを一行ずつやりながらKOUBAILISTに入れていく\n",
+    "\n",
+    "    print(\"loopをぬけました\")\n",
+    "    # 行列を連結する 1×３の行列３つのリストを，３×３の行列に変換させる ！！成功！！\n",
+    "    KOUBAILIST = np.concatenate(KOUBAILIST, axis=0)\n",
+    "    return KOUBAILIST\n",
+    "\n",
+    "\n",
+    "\n",
+    "#微小量hを定義\n",
+    "h = 1e-2#0.0001\n",
+    "#学習率を定義\n",
+    "learning_rate = 0.6\n",
+    "#学習回数を定義\n",
+    "learn = 2500\n",
+    "\n",
+    "Network = set_network(W_ALL[0], B_ALL[0], W_ALL[1], B_ALL[1], W_ALL[2],B_ALL[2],)#３層のネットワークを用意\n",
+    "COUNT=[]\n",
+    "LOSS=[]\n",
+    "\n",
+    "\n",
+    "\n",
+    "#繰り返し処理\n",
+    "for LEARN in range (2): #適当 未定あとできめる　学習回数？？\n",
+    "    Network = set_network(W_ALL[0], B_ALL[0], W_ALL[1], B_ALL[1], W_ALL[2],B_ALL[2],)#３層のネットワークを用意\n",
+    "    Z_ALL, FZ_ALL = forward(Network, in_x) #順伝播\n",
+    "\n",
+    "    # 逆伝播\n",
+    "    # for layer_num in range(layer_num, 0, -1):\n",
+    "    koubai = grad_loss_and_y(layer_num, teach, FZ_ALL[layer_num])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい fz_all[layer_num]とは層数の数番目のfzつまり最後の層の出力を引数にとる\n",
+    "    layer_num_loop = layer_num\n",
+    "    for layer_num_loop in trange(layer_num_loop, 1, -1): #進むごとにlayer_numを１ずつ減らしながら繰り返す 繰り返す数は層数ー１がいいんだよなでもそうするにはlayer_num分繰り返させてるからー１したいんだけどそうするとlayer_numの番号ごと－１にしちゃうから指定位置がずれちゃうんだよなくそ～ ！！解決！！0まで繰り返すんじゃなく1まで繰り返せば,層数ー１回繰り返すことが実現できる．そして最後の▲□の時は０層目という情報が必要だから，loopが終わったらlayer_num_loopは０にしておく必要がある．\n",
+    "        print(\"layer_num_loop=\", layer_num_loop,\"です．\")\n",
+    "        triangle = grad_fz_and_z(layer_num_loop, FZ_ALL, Z_ALL) #▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_num_loopも引数にとる\n",
+    "        koubai = np.dot(koubai, triangle)\n",
+    "        # pprint.pprint(W_ALL) 転地できてるか確認用\n",
+    "        star = grad_z_and_fz(W_ALL,) #★マークつまりi番目のｗの行列を返す\n",
+    "        koubai = np.dot(koubai, star)\n",
+    "        print(\"fin=\", layer_num_loop)\n",
+    "            \n",
+    "        layer_num_loop = 0 #これで▲が最後の層を見るようになる（こんなことせず，最後の三角処理をする関数を別に作ったほうがすっきりするのではないか）最後の層を見る必要がないときに最後の層を見るようになっているのではないか\n",
+    "        print(\"layer_num_loop=\", layer_num_loop)\n",
+    "        triangle = grad_fz_and_z(layer_num_loop, FZ_ALL, Z_ALL)\n",
+    "        koubai = np.dot(koubai, triangle)\n",
+    "        square_koubailist = grad_z_and_w(layer_num_loop, FZ_ALL, W_ALL)\n",
+    "\n",
+    "    W_ALL[layer_num_loop] -= square_koubailist*learning_rate #勾配に学習率を掛けたものを引くことで重みを更新し，「学習」する\n",
+    "    print(\"重みを更新しました\")\n",
+    "    \n",
+    "#学習後\n",
+    "pprint.pprint(W_ALL)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer_num = 2\n",
+    "for layer_num in range(layer_num, 0, -1):\n",
+    "    print(layer_num)"
    ]
   },
   {
