update_comment_add

--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -4659,7 +4659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5159,101 +5159,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.61796655 0.69388966]]\n",
+      "[[0.61845118 0.69459641]]\n",
+      "#####################layer_num_loop1 =  2\n",
       "サークル\n",
-      "Y: [[0.61796655 0.69388966]] Length: 1\n",
+      "Y: [[0.61845118 0.69459641]] Length: 1\n",
       "teach: [[0.5 0.7]] Length: 1\n",
-      "[array([ 0.11796655, -0.00611034])]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 1004.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "layer_num_loop= 2 です．\n",
+      "[array([ 0.11845118, -0.00540359])]\n",
+      "layer_num_loop2= 2 です．\n",
       "start▲ [[0. 0.]\n",
       " [0. 0.]]\n",
-      "fin▲ [[0.22757316 0.        ]\n",
-      " [0.         0.2221672 ]]\n",
-      "star\n",
-      "array([[0.51423444, 0.04645041, 0.17052412],\n",
-      "       [0.59241457, 0.60754485, 0.06505159]])\n",
-      "fin= 2\n",
-      "layer_num_loop= 0\n",
-      "start▲ [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "fin▲ [[0.22372981 0.         0.        ]\n",
-      " [0.         0.22219294 0.        ]\n",
-      " [0.         0.         0.21573683]]\n",
-      "loopをぬけました\n",
-      "重みを更新しました\n",
-      "[[0.61796079 0.69388116]]\n",
-      "サークル\n",
-      "Y: [[0.61796079 0.69388116]] Length: 1\n",
-      "teach: [[0.5 0.7]] Length: 1\n",
-      "[array([ 0.11796079, -0.00611884])]\n"
+      "fin▲ [[0.22754012 0.        ]\n",
+      " [0.         0.22211479]]\n",
+      "star\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "layer_num_loop= 2 です．\n",
-      "start▲ [[0. 0.]\n",
-      " [0. 0.]]\n",
-      "fin▲ [[0.22757355 0.        ]\n",
-      " [0.         0.22216783]]\n",
-      "star\n",
-      "array([[0.51423444, 0.04645041, 0.17052412],\n",
-      "       [0.59241457, 0.60754485, 0.06505159]])\n",
-      "fin= 2\n",
-      "layer_num_loop= 0\n",
-      "start▲ [[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "fin▲ [[0.22374198 0.         0.        ]\n",
-      " [0.         0.22220532 0.        ]\n",
-      " [0.         0.         0.21574901]]\n",
-      "loopをぬけました\n",
-      "重みを更新しました\n",
-      "[array([[ 0.47695713,  0.03058061,  0.01572264],\n",
-      "       [ 0.05363001,  0.86158589,  0.59598241],\n",
-      "       [ 0.66767166, -0.0210569 ,  0.92334399]]),\n",
-      " array([[0.18340451, 0.30424224, 0.52475643],\n",
-      "       [0.43194502, 0.29122914, 0.61185289],\n",
-      "       [0.13949386, 0.29214465, 0.36636184]]),\n",
-      " array([[0.51423444, 0.59241457],\n",
-      "       [0.04645041, 0.60754485],\n",
-      "       [0.17052412, 0.06505159]])]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'star' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 89\u001b[0m\n\u001b[0;32m     87\u001b[0m koubai \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(koubai, triangle)\n\u001b[0;32m     88\u001b[0m \u001b[39m# pprint.pprint(W_ALL) 転地できてるか確認用\u001b[39;00m\n\u001b[1;32m---> 89\u001b[0m star \u001b[39m=\u001b[39m grad_z_and_fz(W_ALL,layer_num_loop2) \u001b[39m#★マークつまりi番目のｗの行列を返す\u001b[39;00m\n\u001b[0;32m     90\u001b[0m starflag \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     91\u001b[0m pprint\u001b[39m.\u001b[39mpprint(star)\n",
+      "Cell \u001b[1;32mIn[9], line 32\u001b[0m, in \u001b[0;36mgrad_z_and_fz\u001b[1;34m(W_ALL, layer_num)\u001b[0m\n\u001b[0;32m     30\u001b[0m W \u001b[39m=\u001b[39m W_ALL[layer_num] \u001b[39m#今考えている（見ている）重みの値のセットを取り出す（何層目の重み層か）\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mstar\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 32\u001b[0m pprint\u001b[39m.\u001b[39mpprint(star)\n\u001b[0;32m     33\u001b[0m star \u001b[39m=\u001b[39m  np\u001b[39m.\u001b[39mtranspose(W) \u001b[39m#偏微分処理を行ったため，転置行列にする 大事！！\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mstar\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'star' referenced before assignment"
      ]
     }
    ],
@@ -5287,9 +5223,9 @@
     "\n",
     "\n",
     "# ★マークのタイプの行列微分する関数(重みWが出る)．ここでは全パターン出る\n",
-    "def grad_z_and_fz(W_ALL,):\n",
+    "def grad_z_and_fz(W_ALL,layer_num,):\n",
     "    W = W_ALL[layer_num] #今考えている（見ている）重みの値のセットを取り出す（何層目の重み層か）\n",
-    "    star =  np.transpose(W) #偏微分処理を行ったため，転置行列にする 大事！！\n",
+    "    star =  np.transpose(W) #！！大事！！　偏微分処理を行ったため，転置行列にする　というより，そのニューロンが次のニューロンに出力する値をひとまとまりにして，各ニューロンが出す出力のまとまりを1要素としてリストにしていたので（つまり行数はニューロンの数，列数は受け取るニューロンの数としていたので）それの逆で計算しないと計算がうまくいかないので，転地をすることでwを再定義することなく計算できるようにする．しかしこれはw_ALLの定義を帰ればしなくてもよい処理のはず\n",
     "    print(\"star\")\n",
     "    pprint.pprint(star)\n",
     "    return star\n",
@@ -5318,6 +5254,9 @@
     "#学習回数を定義\n",
     "learn = 2500\n",
     "\n",
+    "\n",
+    "starflag = 0 #三角と星マークの処理を一度もしないときの判別用フラグ\n",
+    "\n",
     "Network = set_network(W_ALL[0], B_ALL[0], W_ALL[1], B_ALL[1], W_ALL[2],B_ALL[2],)#３層のネットワークを用意\n",
     "COUNT=[]\n",
     "LOSS=[]\n",
@@ -5325,31 +5264,53 @@
     "\n",
     "\n",
     "#繰り返し処理\n",
-    "for LEARN in range (2): #適当 未定あとできめる　学習回数？？\n",
+    "for LEARN in range (5): #適当 未定あとできめる　学習回数？？\n",
     "    Network = set_network(W_ALL[0], B_ALL[0], W_ALL[1], B_ALL[1], W_ALL[2],B_ALL[2],)#３層のネットワークを用意\n",
     "    Z_ALL, FZ_ALL = forward(Network, in_x) #順伝播\n",
     "\n",
     "    # 逆伝播\n",
-    "    # for layer_num in range(layer_num, 0, -1):\n",
-    "    koubai = grad_loss_and_y(layer_num, teach, FZ_ALL[layer_num])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい fz_all[layer_num]とは層数の数番目のfzつまり最後の層の出力を引数にとる\n",
-    "    layer_num_loop = layer_num\n",
-    "    for layer_num_loop in trange(layer_num_loop, 1, -1): #進むごとにlayer_numを１ずつ減らしながら繰り返す 繰り返す数は層数ー１がいいんだよなでもそうするにはlayer_num分繰り返させてるからー１したいんだけどそうするとlayer_numの番号ごと－１にしちゃうから指定位置がずれちゃうんだよなくそ～ ！！解決！！0まで繰り返すんじゃなく1まで繰り返せば,層数ー１回繰り返すことが実現できる．そして最後の▲□の時は０層目という情報が必要だから，loopが終わったらlayer_num_loopは０にしておく必要がある．\n",
-    "        print(\"layer_num_loop=\", layer_num_loop,\"です．\")\n",
-    "        triangle = grad_fz_and_z(layer_num_loop, FZ_ALL, Z_ALL) #▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_num_loopも引数にとる\n",
-    "        koubai = np.dot(koubai, triangle)\n",
-    "        # pprint.pprint(W_ALL) 転地できてるか確認用\n",
-    "        star = grad_z_and_fz(W_ALL,) #★マークつまりi番目のｗの行列を返す\n",
-    "        koubai = np.dot(koubai, star)\n",
-    "        print(\"fin=\", layer_num_loop)\n",
-    "            \n",
-    "        layer_num_loop = 0 #これで▲が最後の層を見るようになる（こんなことせず，最後の三角処理をする関数を別に作ったほうがすっきりするのではないか）最後の層を見る必要がないときに最後の層を見るようになっているのではないか\n",
-    "        print(\"layer_num_loop=\", layer_num_loop)\n",
-    "        triangle = grad_fz_and_z(layer_num_loop, FZ_ALL, Z_ALL)\n",
-    "        koubai = np.dot(koubai, triangle)\n",
-    "        square_koubailist = grad_z_and_w(layer_num_loop, FZ_ALL, W_ALL)\n",
+    "    layer_num_loop1 = layer_num #どの層まで逆伝播するか決める　layer_num番目つまり層の数だけ逆伝播して，入力層に一番近い\n",
+    "    for layer_num_loop1 in range(layer_num, -1, -1):\n",
+    "        print(\"#####################layer_num_loop1 = \",layer_num_loop1 )\n",
     "\n",
-    "    W_ALL[layer_num_loop] -= square_koubailist*learning_rate #勾配に学習率を掛けたものを引くことで重みを更新し，「学習」する\n",
-    "    print(\"重みを更新しました\")\n",
+    "        koubai = grad_loss_and_y(layer_num, teach, FZ_ALL[layer_num])#●マークつまりy-tの計算 teachどうしよう，yも場所指定がむずい fz_all[layer_num]とは層数の数番目のfzつまり最後の層の出力を引数にとる\n",
+    "        layer_num_loop2 = layer_num_loop1\n",
+    "        #以下のfor文が０回のループと，１回のループと・・・ができれば良い\n",
+    "        for layer_num_loop2 in range(layer_num_loop2, 0, -1): #進むごとにlayer_numを１ずつ減らしながら繰り返す 繰り返す数は層数ー１がいいんだよなでもそうするにはlayer_num分繰り返させてるからー１したいんだけどそうするとlayer_numの番号ごと－１にしちゃうから指定位置がずれちゃうんだよなくそ～ ！！解決！！0まで繰り返すんじゃなく1まで繰り返せば,層数ー１回繰り返すことが実現できる．そして最後の▲□の時は０層目という情報が必要だから，loopが終わったらlayer_num_loop2は０にしておく必要がある．\n",
+    "            print(\"layer_num_loop2=\", layer_num_loop2,\"です．\")\n",
+    "            triangle = grad_fz_and_z(layer_num_loop2, FZ_ALL, Z_ALL) #▲マークつまりシグモイド微分にｚを入れた値が出る計算 現在の層の情報が必要なためlayer_num_loop2も引数にとる\n",
+    "            koubai = np.dot(koubai, triangle)\n",
+    "            # pprint.pprint(W_ALL) 転地できてるか確認用\n",
+    "            star = grad_z_and_fz(W_ALL,layer_num_loop2) #★マークつまりi番目のｗの行列を返す\n",
+    "            starflag = 1\n",
+    "            pprint.pprint(star)\n",
+    "            pprint.pprint(koubai)\n",
+    "            koubai = np.dot(koubai, star)\n",
+    "            pprint.pprint(star)\n",
+    "            pprint.pprint(koubai)\n",
+    "            print(\"6r6666666666666666666\")\n",
+    "            print(\"fin=\", layer_num_loop2)\n",
+    "\n",
+    "        if starflag == 1:\n",
+    "            layer_num_loop2 -= 1 #これで▲が最後の層を見るようになる\n",
+    "        print(\"layer_num_loop2=\", layer_num_loop2)\n",
+    "        print(\"cccccccccccccc\")\n",
+    "        pprint.pprint(koubai)\n",
+    "        triangle = grad_fz_and_z(layer_num_loop2, FZ_ALL, Z_ALL)\n",
+    "        print(\"cccccccccccccc\")\n",
+    "        pprint.pprint(koubai)\n",
+    "        pprint.pprint(triangle)\n",
+    "        koubai = np.dot(koubai, triangle)\n",
+    "        square_koubailist = grad_z_and_w(layer_num_loop2, FZ_ALL, W_ALL)\n",
+    "        print(\"-----------\")\n",
+    "        print(layer_num_loop1)\n",
+    "        print(\"-----------\")\n",
+    "        pprint.pprint(W_ALL[layer_num_loop1])\n",
+    "        print(\"-----------\")\n",
+    "        pprint.pprint(square_koubailist)\n",
+    "\n",
+    "        W_ALL[layer_num_loop2] -= square_koubailist*learning_rate #勾配に学習率を掛けたものを引くことで重みを更新し，「学習」する\n",
+    "        print(\"重みを更新しました\")\n",
     "    \n",
     "#学習後\n",
     "pprint.pprint(W_ALL)\n",
@@ -5360,22 +5321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "2\n",
-      "1\n"
+      "1\n",
+      "0\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "layer_num = 2\n",
-    "for layer_num in range(layer_num, 0, -1):\n",
-    "    print(layer_num)"
+    "lay = 3\n",
+    "for i in range (lay, -1, -1): #これでやっと０になる\n",
+    "    print(i)\n",
+    "    #予想では３，２，１とでる　つまりlayは0にはならない！？\n",
+    "\n",
+    "print(i)\n"
    ]
   },
   {
@@ -5483,7 +5450,7 @@
     "                    triangle[gyou][gyou] = (1-sigmoid(FZ[gyou]))*sigmoid(FZ[gyou]) #配列をnp.zerosで作って，その要素を指定場所に代入する\n",
     "                    # 三角変換は，1行一列目，二行二列目，産業三列目，．．．というような値しか出ないからOK！！！！\n",
     "                    return triangle\n",
-    "            \n",
+    "\n",
     "\n",
     "\n",
     "# ★マークのタイプの行列微分する関数(重みWが出る)．ここでは全パターン出る　！！！！完成！！！！\n",
